Fix image  issue

--- a/public/index.html
+++ b/public/index.html
@@ -5,14 +5,24 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Read the latest news, with global articles and updates"
-    />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    <meta name="description" content="Read the latest news, with global articles and updates" />
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/favicon.ico" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    
+
     <title>New York Times Clone</title>
+
+    <!-- Open Graph (per WhatsApp, Facebook, LinkedIn) -->
+    <meta property="og:title" content="New York Times Clone" />
+    <meta property="og:description" content="Stay updated with the latest global news and insights." />
+    <meta property="og:image" content="%PUBLIC_URL%/favicon.ico" />
+    <meta property="og:url" content="https://jacopoloco.github.io/NewYorkTimes-clone/" />
+    <meta property="og:type" content="website" />
+
+    <!-- Twitter Card (per Twitter) -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="New York Times Clone" />
+    <meta name="twitter:description" content="Stay updated with the latest global news and insights." />
+    <meta name="twitter:image" content="%PUBLIC_URL%/favicon.ico" />
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
